# auto-llm-wiki

./: .gitignore  Cargo.toml  README.md  findings.md  progress.md  task_plan.md
crates/wiki-cli/: Cargo.toml
crates/wiki-cli/src/: args.rs  main.rs
crates/wiki-cli/tests/: cli_e2e.rs  provider_ops.rs
crates/wiki-core/: Cargo.toml
crates/wiki-core/src/: claim.rs  event.rs  lib.rs  lint.rs  provider.rs  query.rs
crates/wiki-core/tests/: domain_behavior.rs
crates/wiki-kernel/: Cargo.toml
crates/wiki-kernel/src/: config.rs  engine.rs  lib.rs  lint.rs  retrieval.rs  wiki.rs
crates/wiki-kernel/src/providers/: embedding.rs  graph.rs  keyword.rs  mod.rs
crates/wiki-kernel/tests/: degradation.rs  graph_retrieval.rs  keyword_retrieval.rs  provider_config.rs  vector_retrieval.rs  workflows.rs
crates/wiki-mempalace-bridge/: Cargo.toml
crates/wiki-mempalace-bridge/src/: bridge.rs  lib.rs
crates/wiki-storage/: Cargo.toml
crates/wiki-storage/src/: lib.rs  repository.rs  schema.rs  sqlite.rs
crates/wiki-storage/tests/: fts_and_provider_state.rs  sqlite_repository.rs
docs/plans/: 2026-04-17-auto-llm-wiki-implementation.md  2026-04-17-production-retrieval-bridge-design.md  2026-04-17-production-retrieval-bridge-implementation.md
scripts/: e2e.sh
