[workspace]
members = [
    "crates/wiki-core",
    "crates/wiki-kernel",
    "crates/wiki-storage",
    "crates/wiki-mempalace-bridge",
    "crates/wiki-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
thiserror = "2.0"
toml = "0.8"
uuid = { version = "1.10", features = ["serde", "v4"] }
