[package]
name = "wiki-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wiki-core = { path = "../wiki-core" }
wiki-kernel = { path = "../wiki-kernel" }
wiki-mempalace-bridge = { path = "../wiki-mempalace-bridge" }
wiki-storage = { path = "../wiki-storage" }

[dev-dependencies]
tempfile.workspace = true
