[package]
name = "wiki-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
wiki-core = { path = "../wiki-core" }
wiki-mempalace-bridge = { path = "../wiki-mempalace-bridge" }
wiki-storage = { path = "../wiki-storage" }

[dev-dependencies]
tempfile.workspace = true
