[package]
name = "wiki-mempalace-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wiki-core = { path = "../wiki-core" }
wiki-storage = { path = "../wiki-storage" }
