[package]
name = "wiki-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
wiki-core = { path = "../wiki-core" }

[dev-dependencies]
tempfile.workspace = true
